@@ -2315,3 +2315,6 @@ seen. gmtime warning still there
 - stats bugfixes: a null pointer crash and a '/stats k' bug.
 - Fixed a couple of problems in the new stats system
 - Fixed another stats problem, reported by Angrywolf (#0001163)
+- Rewrote the usermode module interface to be more stable and consistent with other
+  module functions. New functions are UmodeAdd and UmodeDel (backwards compatibility
+  is available for the old functions).
